<resources>
    <string name="app_name">Printum</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_Lof">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_detail">Printum</string>
    <string name="user_description"> Un nombre que es sinónimo de innovación, calidad y servicio en la industria gráfica. Durante más de 10 años, pRiNtUm ha sido el líder en productos de impresión con curado ULTRAVIOLETA y en la resolución de problemas de impresión para lograr sus metas; le damos las soluciones que necesita para construir y centrarse en su negocio.</string>
    <string name="user_info">My self-summary</string>
    <string name="printum">Printum</string>
    <string name="tab_recyclerview">Tab RecyclerView</string>
    <string name="printum_username_com">Printum@username.com</string>
    <string name="description">Printum</string>
    <string name="activity">Productos</string>
    <string name="communicate">Descuentos</string>
    <string name="likes">Certificados</string>
    <string name="matches">Hojas de seguridad</string>
    <string name="HS">Hojas de seguridad</string>
    <string name="CC">Certificados de calidad</string>
    <string name="FC">Ficha Tecnica</string>
    <string name="messages">EquipoPrintum</string>
    <string name="quickmatch">Conocenos</string>
    <string name="visitors">Clientes</string>
    <string name="title_activity_login">Sign in PrintumAPP</string>
    <string name="hello_world">Hello world!</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="add">Add</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="website">Website</string>
    <string name="company_name">Company name</string>
    <string name="add_new_company">Add New Company</string>
    <string name="all_companies">All Companies</string>
    <string name="no_company_in_the_database_create_new_one_by_clicking_the_add_button_at_the_top_right">No company in the database. create new one by clicking the add button at the top right</string>
    <string name="empty_fields_message">One or more fields are empty</string>
    <string name="salary">Salary</string>
    <string name="all_employees">User Printum</string>
    <string name="all_cer">Certificados Printum</string>
    <string name="no_employee_working_for_this_company_add_a_new_one_by_clicking_the_add_button_on_the_top_right">No employee working for this company. Add a new one by clicking the add button on the top right</string>
    <string name="add_new_employee">Add New Employee</string>
    <string name="select_a_company">Select a company</string>
    <string name="delete">Delete</string>
    <string name="company_deleted_successfully">Company deleted successfully</string>
    <string name="employee_deleted_successfully">Employee deleted successfully</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (required)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
