<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:contentDescription="@string/description"
    android:weightSum="1"
    android:baselineAligned="false">

    <ImageView
        android:id="@+id/UserPho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@android:drawable/sym_def_app_icon"
        android:contentDescription="@string/description"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/TittleEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"/>


    <TextView
        android:id="@+id/TittleEmail"
        android:layout_width="186dp"
        android:layout_height="86dp"
        android:text="@string/printum_username_com"
        android:layout_weight="0.48"
        android:layout_above="@+id/TittleCompa"
        android:textDirection="firstStrongLtr"
        android:gravity="center_vertical|right"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="116dp"
        android:layout_height="66dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/printum"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:id="@+id/TittleCompa"
        android:layout_weight="5.78"
        android:gravity="center_vertical|right"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/TittleEmail"
        android:layout_alignStart="@+id/TittleEmail"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
